// =========================================
// FLOW 10: PAYMENT SERVICE
// Quản lý thanh toán (Stripe Integration + Saga Orchestration)
// Bảng: User -> Booking -> Hotel -> OutboxMessage -> ProcessedEvent
// =========================================

Enum BookingStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
}

Enum PaymentMethod {
  STRIPE
  PAYPAL
  VNPAY
  BANK_TRANSFER
  CASH_ON_CHECKIN
}

Enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
  REFUNDED
}

Enum OutboxStatus {
  PENDING
  PROCESSING
  SENT
  FAILED
}

Table User {
  id varchar [primary key]
  email varchar [unique]
  name varchar
  phone varchar [null]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

Table Hotel {
  id integer [primary key]
  authorId varchar
  title varchar
  slug varchar [unique]
  price decimal(12,2)
  maxGuests integer
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

Table Booking {
  id varchar [primary key]
  bookingId varchar(255) [null]
  userId varchar
  hotelId integer
  guestName varchar
  guestEmail varchar
  guestPhone varchar
  adults integer [default: 1]
  children integer [default: 0]
  bookingSnapshot json [null]
  contactDetails json [null]
  checkIn timestamp
  checkOut timestamp
  nights integer
  basePrice decimal(12,2)
  discount decimal(12,2) [default: 0]
  totalAmount decimal(12,2)
  currency varchar [default: 'VND']
  paymentMethod PaymentMethod [default: 'STRIPE']
  paymentStatus PaymentStatus [default: 'PENDING']
  paymentIntentId varchar(255) [null]
  stripeSessionId varchar(255) [null]
  paymentFailureReason text [null]
  status BookingStatus [default: 'PENDING']
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

Table OutboxMessage {
  id varchar [primary key]
  dedupKey varchar [unique]
  aggregateType varchar
  aggregateId varchar
  eventType varchar
  topic varchar
  payload json
  status OutboxStatus [default: 'PENDING']
  attempts integer [default: 0]
  availableAt timestamp [default: `now()`]
  processedAt timestamp [null]
  lastError text [null]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp
}

Table ProcessedEvent {
  eventId varchar [primary key]
  topic varchar
  createdAt timestamp [default: `now()`]
}

Ref: Booking.userId > User.id [delete: cascade]
Ref: Booking.hotelId > Hotel.id [delete: cascade]
Ref: Hotel.authorId > User.id